syntax = "proto3";

message MetaData {
  string fname = 1;
  string aes_key = 2;
  uint64 file_len = 3;
}
